minor whitespace adjustment, fix style rule causing horizontal scroll

--- a/curiositymachine/sass/pages/_home.scss
+++ b/curiositymachine/sass/pages/_home.scss
@@ -68,7 +68,6 @@
   }
 
   .sign-up-panel {
-    padding: $large-spacing * 2 0px $large-spacing * 2 0px;
     background-color: $primary-blue;
     color: white;
   }
