--- a/curiositymachine/static/css/main.css
+++ b/curiositymachine/static/css/main.css
@@ -6238,7 +6238,6 @@ footer {
   color: #F2B353; }
 
 #index-page .sign-up-panel {
-  padding: 6em 0px 6em 0px;
   background-color: #00B1C3;
   color: white; }
 
